--- a/MR/nbproject/project.properties
+++ b/MR/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=MR
+application.vendor=tuns
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,34 +27,43 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/MR.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
-file.reference.hadoop-common-2.8.0-tests.jar=C:\\hadoop-2.8.0\\share\\hadoop\\common\\hadoop-common-2.8.0-tests.jar
-file.reference.hadoop-common-2.8.0.jar=C:\\hadoop-2.8.0\\share\\hadoop\\common\\hadoop-common-2.8.0.jar
-file.reference.hadoop-mapreduce-client-app-2.8.0.jar=C:\\hadoop-2.8.0\\share\\hadoop\\mapreduce\\hadoop-mapreduce-client-app-2.8.0.jar
-file.reference.hadoop-mapreduce-client-common-2.8.0.jar=C:\\hadoop-2.8.0\\share\\hadoop\\mapreduce\\hadoop-mapreduce-client-common-2.8.0.jar
-file.reference.hadoop-mapreduce-client-core-2.8.0.jar=C:\\hadoop-2.8.0\\share\\hadoop\\mapreduce\\hadoop-mapreduce-client-core-2.8.0.jar
-file.reference.hadoop-mapreduce-client-hs-2.8.0.jar=C:\\hadoop-2.8.0\\share\\hadoop\\mapreduce\\hadoop-mapreduce-client-hs-2.8.0.jar
-file.reference.hadoop-mapreduce-client-hs-plugins-2.8.0.jar=C:\\hadoop-2.8.0\\share\\hadoop\\mapreduce\\hadoop-mapreduce-client-hs-plugins-2.8.0.jar
-file.reference.hadoop-mapreduce-client-jobclient-2.8.0-tests.jar=C:\\hadoop-2.8.0\\share\\hadoop\\mapreduce\\hadoop-mapreduce-client-jobclient-2.8.0-tests.jar
-file.reference.hadoop-mapreduce-client-jobclient-2.8.0.jar=C:\\hadoop-2.8.0\\share\\hadoop\\mapreduce\\hadoop-mapreduce-client-jobclient-2.8.0.jar
-file.reference.hadoop-mapreduce-client-shuffle-2.8.0.jar=C:\\hadoop-2.8.0\\share\\hadoop\\mapreduce\\hadoop-mapreduce-client-shuffle-2.8.0.jar
-file.reference.hadoop-mapreduce-examples-2.8.0.jar=C:\\hadoop-2.8.0\\share\\hadoop\\mapreduce\\hadoop-mapreduce-examples-2.8.0.jar
-file.reference.hadoop-nfs-2.8.0.jar=C:\\hadoop-2.8.0\\share\\hadoop\\common\\hadoop-nfs-2.8.0.jar
+file.reference.hadoop-common-2.7.7-tests.jar=/usr/local/hadoop/share/hadoop/common/hadoop-common-2.7.7-tests.jar
+file.reference.hadoop-common-2.7.7.jar=/usr/local/hadoop/share/hadoop/common/hadoop-common-2.7.7.jar
+file.reference.hadoop-hdfs-2.7.7-tests.jar=/usr/local/hadoop/share/hadoop/hdfs/hadoop-hdfs-2.7.7-tests.jar
+file.reference.hadoop-hdfs-2.7.7.jar=/usr/local/hadoop/share/hadoop/hdfs/hadoop-hdfs-2.7.7.jar
+file.reference.hadoop-hdfs-nfs-2.7.7.jar=/usr/local/hadoop/share/hadoop/hdfs/hadoop-hdfs-nfs-2.7.7.jar
+file.reference.hadoop-mapreduce-client-app-2.7.7.jar=/usr/local/hadoop/share/hadoop/mapreduce/hadoop-mapreduce-client-app-2.7.7.jar
+file.reference.hadoop-mapreduce-client-common-2.7.7.jar=/usr/local/hadoop/share/hadoop/mapreduce/hadoop-mapreduce-client-common-2.7.7.jar
+file.reference.hadoop-mapreduce-client-core-2.7.7.jar=/usr/local/hadoop/share/hadoop/mapreduce/hadoop-mapreduce-client-core-2.7.7.jar
+file.reference.hadoop-mapreduce-client-hs-2.7.7.jar=/usr/local/hadoop/share/hadoop/mapreduce/hadoop-mapreduce-client-hs-2.7.7.jar
+file.reference.hadoop-mapreduce-client-hs-plugins-2.7.7.jar=/usr/local/hadoop/share/hadoop/mapreduce/hadoop-mapreduce-client-hs-plugins-2.7.7.jar
+file.reference.hadoop-mapreduce-client-jobclient-2.7.7-tests.jar=/usr/local/hadoop/share/hadoop/mapreduce/hadoop-mapreduce-client-jobclient-2.7.7-tests.jar
+file.reference.hadoop-mapreduce-client-jobclient-2.7.7.jar=/usr/local/hadoop/share/hadoop/mapreduce/hadoop-mapreduce-client-jobclient-2.7.7.jar
+file.reference.hadoop-mapreduce-client-shuffle-2.7.7.jar=/usr/local/hadoop/share/hadoop/mapreduce/hadoop-mapreduce-client-shuffle-2.7.7.jar
+file.reference.hadoop-mapreduce-examples-2.7.7.jar=/usr/local/hadoop/share/hadoop/mapreduce/hadoop-mapreduce-examples-2.7.7.jar
+file.reference.hadoop-nfs-2.7.7.jar=/usr/local/hadoop/share/hadoop/common/hadoop-nfs-2.7.7.jar
 includes=**
+jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
+jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${file.reference.hadoop-common-2.8.0-tests.jar}:\
-    ${file.reference.hadoop-common-2.8.0.jar}:\
-    ${file.reference.hadoop-nfs-2.8.0.jar}:\
-    ${file.reference.hadoop-mapreduce-client-app-2.8.0.jar}:\
-    ${file.reference.hadoop-mapreduce-client-common-2.8.0.jar}:\
-    ${file.reference.hadoop-mapreduce-client-core-2.8.0.jar}:\
-    ${file.reference.hadoop-mapreduce-client-hs-2.8.0.jar}:\
-    ${file.reference.hadoop-mapreduce-client-hs-plugins-2.8.0.jar}:\
-    ${file.reference.hadoop-mapreduce-client-jobclient-2.8.0-tests.jar}:\
-    ${file.reference.hadoop-mapreduce-client-jobclient-2.8.0.jar}:\
-    ${file.reference.hadoop-mapreduce-client-shuffle-2.8.0.jar}:\
-    ${file.reference.hadoop-mapreduce-examples-2.8.0.jar}
+    ${file.reference.hadoop-common-2.7.7-tests.jar}:\
+    ${file.reference.hadoop-common-2.7.7.jar}:\
+    ${file.reference.hadoop-nfs-2.7.7.jar}:\
+    ${file.reference.hadoop-mapreduce-client-app-2.7.7.jar}:\
+    ${file.reference.hadoop-mapreduce-client-common-2.7.7.jar}:\
+    ${file.reference.hadoop-mapreduce-client-core-2.7.7.jar}:\
+    ${file.reference.hadoop-mapreduce-client-hs-2.7.7.jar}:\
+    ${file.reference.hadoop-mapreduce-client-hs-plugins-2.7.7.jar}:\
+    ${file.reference.hadoop-mapreduce-client-jobclient-2.7.7-tests.jar}:\
+    ${file.reference.hadoop-mapreduce-client-jobclient-2.7.7.jar}:\
+    ${file.reference.hadoop-mapreduce-client-shuffle-2.7.7.jar}:\
+    ${file.reference.hadoop-mapreduce-examples-2.7.7.jar}:\
+    ${file.reference.hadoop-hdfs-2.7.7-tests.jar}:\
+    ${file.reference.hadoop-hdfs-2.7.7.jar}:\
+    ${file.reference.hadoop-hdfs-nfs-2.7.7.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -78,7 +88,24 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=mr.MR
+jnlp.codebase.type=no.codebase
+jnlp.descriptor=application
+jnlp.enabled=false
+jnlp.mixed.code=default
+jnlp.offline-allowed=false
+jnlp.signed=false
+jnlp.signing=
+jnlp.signing.alias=
+jnlp.signing.keystore=
+main.class=com.mr.WordCount
+# Optional override of default Application-Library-Allowable-Codebase attribute identifying the locations where your signed RIA is expected to be found.
+manifest.custom.application.library.allowable.codebase=
+# Optional override of default Caller-Allowable-Codebase attribute identifying the domains from which JavaScript code can make calls to your RIA without security prompts.
+manifest.custom.caller.allowable.codebase=
+# Optional override of default Codebase manifest attribute, use to prevent RIAs from being repurposed
+manifest.custom.codebase=
+# Optional override of default Permissions manifest attribute (supported values: sandbox, all-permissions)
+manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
