--- a/MR/nbproject/project.properties
+++ b/MR/nbproject/project.properties
@@ -29,41 +29,63 @@ dist.jar=${dist.dir}/MR.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.hadoop-common-2.7.7-tests.jar=/usr/local/hadoop/share/hadoop/common/hadoop-common-2.7.7-tests.jar
-file.reference.hadoop-common-2.7.7.jar=/usr/local/hadoop/share/hadoop/common/hadoop-common-2.7.7.jar
-file.reference.hadoop-hdfs-2.7.7-tests.jar=/usr/local/hadoop/share/hadoop/hdfs/hadoop-hdfs-2.7.7-tests.jar
-file.reference.hadoop-hdfs-2.7.7.jar=/usr/local/hadoop/share/hadoop/hdfs/hadoop-hdfs-2.7.7.jar
-file.reference.hadoop-hdfs-nfs-2.7.7.jar=/usr/local/hadoop/share/hadoop/hdfs/hadoop-hdfs-nfs-2.7.7.jar
-file.reference.hadoop-mapreduce-client-app-2.7.7.jar=/usr/local/hadoop/share/hadoop/mapreduce/hadoop-mapreduce-client-app-2.7.7.jar
-file.reference.hadoop-mapreduce-client-common-2.7.7.jar=/usr/local/hadoop/share/hadoop/mapreduce/hadoop-mapreduce-client-common-2.7.7.jar
-file.reference.hadoop-mapreduce-client-core-2.7.7.jar=/usr/local/hadoop/share/hadoop/mapreduce/hadoop-mapreduce-client-core-2.7.7.jar
-file.reference.hadoop-mapreduce-client-hs-2.7.7.jar=/usr/local/hadoop/share/hadoop/mapreduce/hadoop-mapreduce-client-hs-2.7.7.jar
-file.reference.hadoop-mapreduce-client-hs-plugins-2.7.7.jar=/usr/local/hadoop/share/hadoop/mapreduce/hadoop-mapreduce-client-hs-plugins-2.7.7.jar
-file.reference.hadoop-mapreduce-client-jobclient-2.7.7-tests.jar=/usr/local/hadoop/share/hadoop/mapreduce/hadoop-mapreduce-client-jobclient-2.7.7-tests.jar
-file.reference.hadoop-mapreduce-client-jobclient-2.7.7.jar=/usr/local/hadoop/share/hadoop/mapreduce/hadoop-mapreduce-client-jobclient-2.7.7.jar
-file.reference.hadoop-mapreduce-client-shuffle-2.7.7.jar=/usr/local/hadoop/share/hadoop/mapreduce/hadoop-mapreduce-client-shuffle-2.7.7.jar
-file.reference.hadoop-mapreduce-examples-2.7.7.jar=/usr/local/hadoop/share/hadoop/mapreduce/hadoop-mapreduce-examples-2.7.7.jar
-file.reference.hadoop-nfs-2.7.7.jar=/usr/local/hadoop/share/hadoop/common/hadoop-nfs-2.7.7.jar
+file.reference.commons-csv-1.6.jar=libs/commons-csv-1.6/commons-csv-1.6.jar
+file.reference.hadoop-common-2.9.1-tests.jar=/home/tuns/lib/hadoop/share/hadoop/common/hadoop-common-2.9.1-tests.jar
+file.reference.hadoop-common-2.9.1.jar=/home/tuns/lib/hadoop/share/hadoop/common/hadoop-common-2.9.1.jar
+file.reference.hadoop-hdfs-2.9.1-tests.jar=/home/tuns/lib/hadoop/share/hadoop/hdfs/hadoop-hdfs-2.9.1-tests.jar
+file.reference.hadoop-hdfs-2.9.1.jar=/home/tuns/lib/hadoop/share/hadoop/hdfs/hadoop-hdfs-2.9.1.jar
+file.reference.hadoop-hdfs-client-2.9.1-tests.jar=/home/tuns/lib/hadoop/share/hadoop/hdfs/hadoop-hdfs-client-2.9.1-tests.jar
+file.reference.hadoop-hdfs-client-2.9.1.jar=/home/tuns/lib/hadoop/share/hadoop/hdfs/hadoop-hdfs-client-2.9.1.jar
+file.reference.hadoop-hdfs-native-client-2.9.1-tests.jar=/home/tuns/lib/hadoop/share/hadoop/hdfs/hadoop-hdfs-native-client-2.9.1-tests.jar
+file.reference.hadoop-hdfs-native-client-2.9.1.jar=/home/tuns/lib/hadoop/share/hadoop/hdfs/hadoop-hdfs-native-client-2.9.1.jar
+file.reference.hadoop-hdfs-nfs-2.9.1.jar=/home/tuns/lib/hadoop/share/hadoop/hdfs/hadoop-hdfs-nfs-2.9.1.jar
+file.reference.hadoop-hdfs-rbf-2.9.1-tests.jar=/home/tuns/lib/hadoop/share/hadoop/hdfs/hadoop-hdfs-rbf-2.9.1-tests.jar
+file.reference.hadoop-hdfs-rbf-2.9.1.jar=/home/tuns/lib/hadoop/share/hadoop/hdfs/hadoop-hdfs-rbf-2.9.1.jar
+file.reference.hadoop-mapreduce-client-app-2.9.1.jar=/home/tuns/lib/hadoop/share/hadoop/mapreduce/hadoop-mapreduce-client-app-2.9.1.jar
+file.reference.hadoop-mapreduce-client-common-2.9.1.jar=/home/tuns/lib/hadoop/share/hadoop/mapreduce/hadoop-mapreduce-client-common-2.9.1.jar
+file.reference.hadoop-mapreduce-client-core-2.9.1.jar=/home/tuns/lib/hadoop/share/hadoop/mapreduce/hadoop-mapreduce-client-core-2.9.1.jar
+file.reference.hadoop-mapreduce-client-hs-2.9.1.jar=/home/tuns/lib/hadoop/share/hadoop/mapreduce/hadoop-mapreduce-client-hs-2.9.1.jar
+file.reference.hadoop-mapreduce-client-hs-plugins-2.9.1.jar=/home/tuns/lib/hadoop/share/hadoop/mapreduce/hadoop-mapreduce-client-hs-plugins-2.9.1.jar
+file.reference.hadoop-mapreduce-client-jobclient-2.9.1-tests.jar=/home/tuns/lib/hadoop/share/hadoop/mapreduce/hadoop-mapreduce-client-jobclient-2.9.1-tests.jar
+file.reference.hadoop-mapreduce-client-jobclient-2.9.1.jar=/home/tuns/lib/hadoop/share/hadoop/mapreduce/hadoop-mapreduce-client-jobclient-2.9.1.jar
+file.reference.hadoop-mapreduce-client-shuffle-2.9.1.jar=/home/tuns/lib/hadoop/share/hadoop/mapreduce/hadoop-mapreduce-client-shuffle-2.9.1.jar
+file.reference.hadoop-mapreduce-examples-2.9.1.jar=/home/tuns/lib/hadoop/share/hadoop/mapreduce/hadoop-mapreduce-examples-2.9.1.jar
+file.reference.hadoop-nfs-2.9.1.jar=/home/tuns/lib/hadoop/share/hadoop/common/hadoop-nfs-2.9.1.jar
+file.reference.hadoop-yarn-api-2.9.1.jar=/home/tuns/lib/hadoop/share/hadoop/yarn/hadoop-yarn-api-2.9.1.jar
+file.reference.hadoop-yarn-applications-distributedshell-2.9.1.jar=/home/tuns/lib/hadoop/share/hadoop/yarn/hadoop-yarn-applications-distributedshell-2.9.1.jar
+file.reference.hadoop-yarn-applications-unmanaged-am-launcher-2.9.1.jar=/home/tuns/lib/hadoop/share/hadoop/yarn/hadoop-yarn-applications-unmanaged-am-launcher-2.9.1.jar
+file.reference.hadoop-yarn-client-2.9.1.jar=/home/tuns/lib/hadoop/share/hadoop/yarn/hadoop-yarn-client-2.9.1.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${file.reference.hadoop-common-2.7.7-tests.jar}:\
-    ${file.reference.hadoop-common-2.7.7.jar}:\
-    ${file.reference.hadoop-nfs-2.7.7.jar}:\
-    ${file.reference.hadoop-mapreduce-client-app-2.7.7.jar}:\
-    ${file.reference.hadoop-mapreduce-client-common-2.7.7.jar}:\
-    ${file.reference.hadoop-mapreduce-client-core-2.7.7.jar}:\
-    ${file.reference.hadoop-mapreduce-client-hs-2.7.7.jar}:\
-    ${file.reference.hadoop-mapreduce-client-hs-plugins-2.7.7.jar}:\
-    ${file.reference.hadoop-mapreduce-client-jobclient-2.7.7-tests.jar}:\
-    ${file.reference.hadoop-mapreduce-client-jobclient-2.7.7.jar}:\
-    ${file.reference.hadoop-mapreduce-client-shuffle-2.7.7.jar}:\
-    ${file.reference.hadoop-mapreduce-examples-2.7.7.jar}:\
-    ${file.reference.hadoop-hdfs-2.7.7-tests.jar}:\
-    ${file.reference.hadoop-hdfs-2.7.7.jar}:\
-    ${file.reference.hadoop-hdfs-nfs-2.7.7.jar}
+    ${file.reference.hadoop-common-2.9.1-tests.jar}:\
+    ${file.reference.hadoop-common-2.9.1.jar}:\
+    ${file.reference.hadoop-nfs-2.9.1.jar}:\
+    ${file.reference.hadoop-hdfs-2.9.1-tests.jar}:\
+    ${file.reference.hadoop-hdfs-2.9.1.jar}:\
+    ${file.reference.hadoop-hdfs-client-2.9.1-tests.jar}:\
+    ${file.reference.hadoop-hdfs-client-2.9.1.jar}:\
+    ${file.reference.hadoop-hdfs-native-client-2.9.1-tests.jar}:\
+    ${file.reference.hadoop-hdfs-native-client-2.9.1.jar}:\
+    ${file.reference.hadoop-hdfs-nfs-2.9.1.jar}:\
+    ${file.reference.hadoop-hdfs-rbf-2.9.1-tests.jar}:\
+    ${file.reference.hadoop-hdfs-rbf-2.9.1.jar}:\
+    ${file.reference.hadoop-mapreduce-client-app-2.9.1.jar}:\
+    ${file.reference.hadoop-mapreduce-client-common-2.9.1.jar}:\
+    ${file.reference.hadoop-mapreduce-client-core-2.9.1.jar}:\
+    ${file.reference.hadoop-mapreduce-client-hs-2.9.1.jar}:\
+    ${file.reference.hadoop-mapreduce-client-hs-plugins-2.9.1.jar}:\
+    ${file.reference.hadoop-mapreduce-client-jobclient-2.9.1-tests.jar}:\
+    ${file.reference.hadoop-mapreduce-client-jobclient-2.9.1.jar}:\
+    ${file.reference.hadoop-mapreduce-client-shuffle-2.9.1.jar}:\
+    ${file.reference.hadoop-mapreduce-examples-2.9.1.jar}:\
+    ${file.reference.hadoop-yarn-api-2.9.1.jar}:\
+    ${file.reference.hadoop-yarn-applications-distributedshell-2.9.1.jar}:\
+    ${file.reference.hadoop-yarn-applications-unmanaged-am-launcher-2.9.1.jar}:\
+    ${file.reference.hadoop-yarn-client-2.9.1.jar}:\
+    ${file.reference.commons-csv-1.6.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -97,7 +119,7 @@ jnlp.signed=false
 jnlp.signing=
 jnlp.signing.alias=
 jnlp.signing.keystore=
-main.class=com.mr.WordCount
+main.class=com.mr.BT8_LastFMConstants
 # Optional override of default Application-Library-Allowable-Codebase attribute identifying the locations where your signed RIA is expected to be found.
 manifest.custom.application.library.allowable.codebase=
 # Optional override of default Caller-Allowable-Codebase attribute identifying the domains from which JavaScript code can make calls to your RIA without security prompts.
